# c-Game_Board

./: .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  README.md  analysis_params.txt  analysis_summary.txt  board_config.txt  bonus.txt
Algorithm/: CMakeLists.txt  basic_player.cpp  basic_player.h  basic_player_test.cpp  basic_tank_algorithm.cpp  basic_tank_algorithm.h  basic_tank_algorithm_test.cpp  battle_info_impl.cpp  battle_info_impl.h  battle_info_impl_test.cpp  offensive_battle_info.cpp  offensive_battle_info.h  offensive_battle_info_test.cpp  offensive_player.cpp  offensive_player.h  offensive_player_test.cpp  offensive_tank_algorithm.cpp  offensive_tank_algorithm.h  offensive_tank_algorithm_test.cpp
Algorithm/factories/: basic_player_factory.h  basic_player_factory_test.cpp  basic_tank_algorithm_factory.cpp
Algorithm/players/basic/: basic_player.cpp  basic_player.h  basic_tank_algorithm.cpp  basic_tank_algorithm.h  battle_info_impl.cpp  battle_info_impl.h  battle_info_impl_test.cpp
Algorithm/players/offensive/: offensive_battle_info.cpp  offensive_battle_info.h  offensive_player.cpp  offensive_player.h  offensive_tank_algorithm.cpp  offensive_tank_algorithm.h
AlgorithmTest/: CMakeLists.txt  test_basic_player.cpp  test_basic_player.h  test_basic_tank_algorithm.cpp  test_basic_tank_algorithm.h  test_battle_info_impl.cpp  test_battle_info_impl.h
GameManager/: CMakeLists.txt  collision_handler.cpp  collision_handler.h  collision_handler_test.cpp  collision_handler_test.cpp.old  file_loader.cpp  game_board.cpp  game_board.h  game_board_test.cpp  game_manager.cpp  game_manager.h  game_manager_test.cpp  game_manager_test.cpp.old  satellite_view_impl.cpp
GameManager/objects/: game_object.cpp  shell.cpp  shell.h  tank.cpp  tank.h  tank_test.cpp
GameManager/test/: CMakeLists.txt  MOCK_USAGE_GUIDE.md
GameManager/test/helpers/: file_test_helper.cpp  file_test_helper.h  game_object_utilities.h  game_result_validator.h  game_scenario_builder.h
GameManager/test/mocks/: enhanced_mock_algorithm.h  enhanced_mock_player.h  mock_factories.h  scenario_mock_satellite_view.h
GameManager/test/unit/: interface_compliance_test.cpp
Simulator/: AlgorithmRegistrar.h  AlgorithmRegistrar_test.cpp  CMakeLists.txt  GameManagerRegistrar.cpp  GameManagerRegistrar_test.cpp  GameManagerRegistration.cpp  PlayerRegistration_test.cpp  TankAlgorithmRegistration.cpp  TankAlgorithmRegistration_test.cpp  file_loader.cpp  file_loader.h  file_loader_test.cpp  file_satellite_view.cpp  file_satellite_view.h  file_satellite_view_test.cpp  game_runner.cpp  game_runner.h  game_runner_test.cpp  main.cpp  simulator_318835816_211314471
Simulator/game_modes/: base_game_mode.cpp  base_game_mode.h  base_game_mode_test.cpp  basic_game_mode.cpp  basic_game_mode.h  comparative_runner.cpp  comparative_runner.h  competitive_runner.cpp  competitive_runner.h
Simulator/registration/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistrar_test.cpp  GameManagerRegistrar.cpp  GameManagerRegistrar.h  PlayerRegistration.cpp
Simulator/test/: README.md
Simulator/test/helpers/: board_info_test_helpers.h  board_info_test_helpers_test.cpp  registrar_test_helpers.h  registrar_test_helpers_test.cpp
Simulator/test/integration/: RegistrationIntegration_test.cpp
Simulator/test/mocks/: MockFactories.h  MockGameManager.h  MockPlayer.h  MockSatelliteView.h  MockTankAlgorithm.h
Simulator/utils/: command_line_parser.cpp  command_line_parser.h  command_line_parser_test.cpp  error_collector.cpp  error_collector.h  error_collector_test.cpp  file_enumerator.cpp  file_enumerator.h  file_enumerator_test.cpp  file_loader.cpp  file_loader.h  file_loader_test.cpp  file_satellite_view.cpp  file_satellite_view.h  file_satellite_view_test.cpp  library_manager.cpp  library_manager.h  library_manager_test.cpp  library_validator.cpp  library_validator.h  library_validator_test.cpp  output_generator.cpp  output_generator.h  output_generator_test.cpp  thread_pool.cpp  thread_pool.h  thread_pool_test.cpp
TestGameManager/: CMakeLists.txt  collision_handler.cpp  collision_handler.h  game_manager.cpp  game_manager.h
UserCommon/bonus/ui_server/: CMakeLists.txt  ui_main.cpp
test/: CMakeLists.txt  CalculatorTest.cpp  action_test.cpp  analysis_tool_test.cpp  calculator_test.cpp  collision_handler_test.cpp  direction_test.cpp  file_loader_test.cpp  game_board_test.cpp  game_manager_test.cpp  point_test.cpp  satellite_view_impl_test.cpp  shell_test.cpp  tank_test.cpp
test/algo/: algorithm_test.cpp  basic_tank_algorithm_factory_test.cpp  basic_tank_algorithm_test.cpp  chase_algorithm_test.cpp  defensive_algorithm_test.cpp  offensive_tank_algorithm_test.cpp
test/bonus/: board_generator_test.cpp  logger_test.cpp
test/bonus/analysis/: analysis_stats_test.cpp  analysis_tool_test.cpp
test/bonus/cli/: cli_parser_test.cpp
test/bonus/config/: board_config_test.cpp  configuration_base_test.cpp  game_config_test.cpp
test/bonus/logger/: logger_test.cpp
test/factories/: basic_player_factory_test.cpp  basic_tank_algorithm_factory_test.cpp
test/objects/: game_object_test.cpp  shell_test.cpp  tank_test.cpp
test/players/: basic_player_factory_test.cpp  basic_player_test.cpp  battle_info_impl_test.cpp  offensive_battle_info_test.cpp  offensive_player_test.cpp
test/utils/: action_test.cpp  direction_test.cpp  midpoint_test.cpp  point_test.cpp
test_libraries/: CMakeLists.txt  README.md  build_test_libraries.sh  test_scenarios.txt  threading_performance_tests.sh
test_libraries/algorithms/: always_move_forward_player.cpp  always_move_forward_player.h  always_move_forward_tank_algorithm.cpp  always_move_forward_tank_algorithm.h  always_shoot_player.cpp  always_shoot_player.h  always_shoot_tank_algorithm.cpp  always_shoot_tank_algorithm.h  do_nothing_player.cpp  do_nothing_player.h  do_nothing_tank_algorithm.cpp  do_nothing_tank_algorithm.h
test_libraries/common/: test_scenarios_input_errors.md
test_libraries/game_managers/: predictable_game_manager.cpp  predictable_game_manager.h  tie_game_manager.cpp  tie_game_manager.h
(+276 files in other folders)
